--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -450,14 +450,15 @@ startActivity(intent)
 
 UI Layer(界面层, 唯一职责是使用和显示界面状态)
 
-- 界面: 使用 `View` 或 `Jetpack Compose` 等构建视图元素来呈现数据.
+- 界面(UI): 唯一职责是使用 `View` 或 `Jetpack Compose` 等构建视图元素来使用和显示界面状态.
     - 界面会向状态容器发送用户事件通知, 状态容器会处理事件对应的逻辑并更新界面状态.
     - 界面通过使用适当的生命周期感知型协程构建器从状态容器收集最新的界面状态(View: `repeatOnLifecycle`, Compose: `collectAsStateWithLifecycle`). (循环往复)
     - 如果界面不可见或未处于活动状态, 除非明确要求, 否则状态生成和收集的过程可以暂停, 防止消耗任何资源. (生命周期感知型协程构建器会自动控制)
     - 不要替换 activity 或 fragment 的生命周期方法, 可以改为使用 `LifecycleObserver` 监听生命周期事件. 或是通过 `repeatOnLifecycle` 来监听生命周期状态事件(`CREATED`、`DESTROYED`、`INITIALIZED`、`RESUMED`、`STARTED`).
-- 界面状态: 由状态容器提供, 向界面提供数据(`_UiState`, 类似于 `Model`, 尽可能是不可变的.).
-    - 要显示的数据, 控制是否要展示的状态, 控制是否要跳转的状态, 界面的回调函数, 界面的补充信息(突然要弹窗展示的信息)
-- 状态容器: 负责存储和提供界面状态, 并且包含执行相应任务所必需的处理逻辑.
+- 界面状态(UI State): 由状态容器提供, 向界面提供数据(`_UiState`, 类似于 `Model`, 尽可能是不可变的.).
+    - 一般包含要显示的数据, 控制是否要展示的状态, 控制是否要跳转的状态, 界面的回调函数, 界面的补充信息(突然要弹窗展示的信息)
+    - 只有数据源或数据所有者才应负责更新他们公开的数据
+- 状态容器(State holder): 负责存储和提供界面状态, 并且包含执行相应任务所必需的处理逻辑.
     - 状态容器分两种, 一种由普通的类实现(界面逻辑状态容器), 绑定到界面的生命周期, 存储不需要长期保留的界面状态和界面逻辑. 一个种由 `ViewModel` 实现(业务逻辑状态容器), 用于处理业务逻辑, 将数据从数据层或网域层转换为屏幕界面状态, 通过数据流向界面提供数据, 通过回调函数向界面提供事件处理逻辑.
     - `ViewModel` 不要放入容器视图的适配器中, 会增加耦合, 可以通过采用回调的方式(界面状态中放回调或适配器定义回调参数)进行.
     - 在 `ViewModel` 中应该立即处理事件, 并通过事件的处理结果引发状态更新, 而不能将来自 `ViewModel` 的事件发送到界面.
@@ -465,7 +466,8 @@ UI Layer(界面层, 唯一职责是使用和显示界面状态)
     - `ViewModel` 通过数据流(`StateFlow`, `LiveData`)向界面提供界面状态数据, 通过回调函数向界面提供事件处理逻辑.
     - `ViewModel` 通过内置的协程作用域 `viewModelScope` 来执行异步任务(`suspend` 函数), 如从数据源获取数据以及更新界面状态数据.
     - `ViewModel` 应该在屏幕级别的组件中使用, 如 `activity`, `fragment` 等屏幕级别的组件. 对于嵌套的 `fragment`, 如果与父级共享一个 `ViewModel`, 可以通过 `ViewModelProvider` 来获取父级 `fragment` 的 `ViewModel`.
-- 界面事件(包括用户交互、本地资源状态改变、外部资源状态改变产生的事件等)
+- 界面事件(Event): 由界面发送给状态容器的事件, 用于触发状态容器中的逻辑处理.
+    - 包括用户交互、本地资源状态改变、外部资源状态改变产生的事件等.
     - 如果事件需要执行界面逻辑 (与修改界面元素的状态相关, 如可展开项的状态) , 界面便可以直接处理这些事件.
     - 如果事件需要执行业务逻辑 (如刷新屏幕上的数据, 更新数据库数据) , 则应用由 `ViewModel` 处理此事件.
 
@@ -739,6 +741,7 @@ class MyActivity : AppCompatActivity() {
 - 服务定位器: 服务定位器模式提供了一个注册表, 类可以从中获取其依赖项而不构造它们.
 
 Dagger&Hilt 中常见的注解及其功能的详细介绍:
+
 - `@HiltAndroidApp`: 用于标记应用程序的 `Application` 类以在应用程序启动时触发 `Hilt` 的代码生成, 基于 Dagger 生成和管理依赖注入的必要组件.
 - `@AndroidEntryPoint`: 用于标记 `Activity`, `Fragment`, `View`, `Service`, `BroadcastReceiver` 等 Android 组件, 使其成为的依赖注入的入口点, 表示他们需要被注入依赖项.
 - `@HiltViewModel`: 用于标记 `ViewModel` 类, 以告知依赖注入框架为 `ViewModel` 类提供依赖注入.
@@ -820,6 +823,9 @@ class MyService : Service() {
 
 ### 项目测试
 
+> [!cite]
+> [Android 测试模块](https://developer.android.com/topic/modularization/patterns#test-modules)
+> [Android 测试](https://developer.android.com/training/testing?hl=zh-cn)
 - 测试内容
     - 对 ViewModel (包括 Flow) 进行单元测试
     - 对数据层实体进行单元测试. 即对代码库和数据源进行单元测试
@@ -832,9 +838,9 @@ class MyService : Service() {
 
 - 项目模块化: 将应用程序拆分为多个模块, 以便更容易管理和维护, 以下是从高到低的模块组织结构:
     - 应用模块(app): 包含界面入口点, 依赖于功能模块, 支持产品变种(`productFlavors`), 编译为不同的二进制文件, 如不同设备或不同版本的 APK 文件, 以及不同的构建类型(`buildTypes`), 如调试和发布版本.
-    - 功能模块(feature): 包含特定功能的代码, 可以独立编译和测试, 依赖于数据模块.
-    - 数据模块(data): 包含存储库(`Repository`)、数据源(`DataSource`)和模型类(`Model`), 用于封装特定领域的所有数据和业务逻辑, 将存储库公开为外部 API.
+    - 功能模块(feature): 包含一系列相关的屏幕. 对于导航栏, 每个功能可能对应一个目的地. 依赖于数据模块和通用模块.
     - 通用模块(core): 包含应用程序中多个模块之间共享的代码, 如工具类、扩展函数、自定义视图等.
+    - 数据模块(data): 包含存储库(`Repository`)、数据源(`DataSource`)和模型类(`Model`), 用于封装特定领域的所有数据和业务逻辑, 将存储库公开为外部 API.
     - 测试模块(test): 包含单元测试和 UI 测试, 用于测试应用程序的各个部分.
 - 注意事项:
     - 模块间需要相互依赖并通信时, 可以通过将相关逻辑放在另一个中介模块中进行解耦, 以避免直接依赖. 同时此中介模块可以被其他任何需要此逻辑的模块复用.
@@ -1932,7 +1938,6 @@ public final class ViewRootImpl ... {
 
 通过设置 `FLAG_SPLIT_MOTION_EVENTS` 标志来控制是否分割多点触控事件.
 
-
 #### `getMeasuredWidth` 和 `getWidth` 方法的区别
 
 - `getMeasureWidth()` 方法在 `measure()` 过程结束后就可以获得到它的值.
@@ -1984,7 +1989,8 @@ public class View ... {
 帧动画: 通过一系列的图片帧来实现动画效果, 适用于帧数较少的动画效果
 
 - 动画文件定义位置: `res/drawable/`
-- 动画启动尽量在 `onWindowFocusChanged` 方法中启动, 以避免动画启动时界面未绘制完成的问题
+- 动画定义类型: `AnimationDrawable`
+- 在 `Activity` 的 `onCreate()` 方法期间无法调用 `AnimationDrawable` 上调用的 `start()` 方法. 可以从 `Activity` 中的 `onStart()` 方法或者 `onWindowFocusChanged()` 方法中调用 `start()` 方法, 以避免动画启动时界面未绘制完成的问题.
 - 使用时以 `ImageView` 为载体, 通过 `ImageView.setBackgroundResource()` 方法设置动画资源, 并通过将背景转换为 `AnimationDrawable` 对象来启动动画
 
 ```kotlin
@@ -2007,10 +2013,12 @@ public class View ... {
     android:background="@drawable/rocket_thrust_anim" />
 
 // 使用
-ImageView rocketImage = (ImageView) findViewById(R.id.rocket_image);
-rocketImage.setBackgroundResource(R.drawable.rocket_thrust);
-AnimationDrawable rocketAnimation = (AnimationDrawable) rocketImage.getBackground();
-rocketAnimation.start();
+val rocketImage = findViewById<ImageView>(R.id.rocket_image).apply {
+    setBackgroundResource(R.drawable.rocket_thrust)
+    rocketAnimation = background as AnimationDrawable
+}
+
+rocketImage.setOnClickListener({ rocketAnimation.start() })
 ```
 
 #### 插值器和求值器
@@ -2030,6 +2038,7 @@ rocketAnimation.start();
 - `@android:anim/anticipate_overshoot_interpolator` | `AnticipateOvershootInterpolator`: 先回退一小步再加速, 最后超出重点一小步后回弹到终点
 - `@android:anim/bounce_interpolator` | `BounceInterpolator`: 加速到终点后持续弹跳直至停止
 - `@android:anim/cycle_interpolator` | `CycleInterpolator`: 周期运动
+- `pathInterpolator` | `PathInterpolator`: 自定义路径插值器, 支持为二次贝塞尔曲线和三次贝塞尔曲线创建插值器
 
 ```xml
 // 默认插值器的参数设置
@@ -2041,7 +2050,10 @@ rocketAnimation.start();
 <accelerateDecelerateInterpolator xmlns:android="http://schemas.android.com/apk/res/android" /> // 无法自定义参数
 <anticipateOvershootInterpolator xmlns:android="http://schemas.android.com/apk/res/android" android:tension="2" android:extraTension="2" /> // 可设置回退一小步的张力和超出终点后的张力
 <bounceInterpolator xmlns:android="http://schemas.android.com/apk/res/android" /> // 无法自定义参数
-<cycleInterpolator xmlns:android="http://schemas.android.com/apk/res/android" android:cycles="2" /> // 
+<cycleInterpolator xmlns:android="http://schemas.android.com/apk/res/android" android:cycles="2" /> // 可设置周期数
+<pathInterpolator xmlns:android="http://schemas.android.com/apk/res/android" 
+    android:controlX1="0.1" android:controlY1="0.2" android:controlX2="0.3" android:controlY2="0.4"
+/> // 可设置路径插值器的控制点坐标
 ```
 
 ```kotlin
@@ -2058,6 +2070,15 @@ val objectAnimator = ObjectAnimator.ofFloat(view, "translationX", 0f, 100f).appl
     interpolator = MyInterpolator()
 }
 objectAnimator.start()
+
+// 使用路径插值器
+val path = Path().apply {
+    moveTo(0f, 0f) // moveTo() 方法用于将画笔移动到指定位置
+    lineTo(100f, 100f) // lineTo() 方法用于从当前位置画一条直线到指定位置
+    cubicTo(100f, 0f, 200f, 200f, 300f, 100f) // cubicTo() 方法用于绘制三次贝塞尔曲线
+    arcTo(0f, 0f, 100f, 100f, 0f, 270f, true) // arcTo() 方法用于绘制弧形
+}
+val pathInterpolator = PathInterpolator(path)
 ```
 
 求值器（TypeEvaluator）决定了动画属性值在起始值和结束值之间随进度 (fraction) 而如何变化. 动画期间, 求值器会根据当前时间对应的动画进度来计算出当前属性值, 并将其传递给动画监听器, 从而实现动画效果.
@@ -2096,7 +2117,7 @@ animator.addUpdateListener { animation ->
 animator.start()
 ```
 
-#### android.view.animation（视图动画, 平移, 缩放, 旋转, 透明度）
+#### android.view.animation（视图动画, 补间动画, 平移, 缩放, 旋转, 透明度）
 >
 > [!cite]
 >
@@ -2174,8 +2195,7 @@ animator.start()
     />
     ```
 
-- 动画启动方式 (xml) 暂无
-- 动画启动方式(代码)
+- 动画启动方式 (xml)
 
     ```kotlin
 
@@ -2189,6 +2209,7 @@ animator.start()
     FragmentTransaction transaction = fragmentManager.beginTransaction();
     transaction.setCustomAnimations(R.anim.enter_animation, R.anim.exit_animation);
     transaction.replace(R.id.fragment_container, new MyFragment());
+    transaction.addToBackStack(null)
     transaction.commit();
 
     // Activity
@@ -2196,6 +2217,8 @@ animator.start()
     val options = ActivityOptions.makeCustomAnimation(context, R.anim.enter_anim, R.anim.exit_anim)
     startActivity(intent, options.toBundle())
     ```
+
+- 动画启动方式(代码) 暂无
 
 #### android.animation (属性动画)
 
@@ -2207,8 +2230,8 @@ animator.start()
 - 动画文件定义位置: `res/animator/`
 - 使用时需要每个动画都需要绑定目标对象的属性名称, 并通过 `setTarget()` 方法绑定目标对象, 然后再通过 `start()` 方法启动动画.
 - 23 之后的安卓版本可以使用 `PropertyValuesHolder` 和 `Keyframe` 来进阶定义动画效果, 比如为动画添加关键帧, 设置关键帧的插值器, 为 `objectAnimator` 添加多个属性值等.
-- 具有与视图动画几乎相同的通用属性, 如 `duration`, `startOffset`, `fillBefore`, `fillEnabled`, `fillAfter`, `repeatCount`, `repeatMode`, `interpolator` 等.
 - 对于修改后不自动触发 `invalidate()` 方法的属性, 需要手动调用 `invalidate()` 方法来刷新视图.
+- 具有与视图动画几乎相同的通用属性, 如 `duration`, `startOffset`, `fillBefore`, `fillEnabled`, `fillAfter`, `repeatCount`, `repeatMode`, `interpolator` 等.
 
     ```xml
     <any 
@@ -2256,6 +2279,10 @@ val valueAnimator = ValueAnimator.ofObject(PointFEvaluator(), startPoint, endPoi
 val objectAnimator = ObjectAnimator.ofInt(view, "translationX", 0, 100)
 val objectAnimator = ObjectAnimator.ofFloat(view, "translationX", 0f, 100f)
 val objectAnimator = ObjectAnimator.ofObject(view, "point", PointFEvaluator(), startPoint, endPoint)
+val path = Path().apply {
+    arcTo(0f, 0f, 100f, 100f, 0f, 359f, true) // 一个圆形路径
+}
+val objectAnimator = ObjectAnimator.ofFloat(view, View.X, View.Y, path)
 ```
 
 ```xml
@@ -2386,7 +2413,7 @@ val animator = AnimatorSet().apply {
     val animator = ObjectAnimator.ofPropertyValuesHolder(tagetView, propertyValuesHolderX, propertyValuesHolderY)
     ```
 
-#### 属性动画启动
+##### 属性动画启动
 
 - 动画监听器有两种, 一种是专属 `ValueAnimator`的 `AnimatorUpdateListener` 用于监听动画过程中属性值的变化, 另一种是 `AnimatorListener` 用于监听动画的开始, 结束, 取消, 重复等事件.
 
@@ -2439,6 +2466,61 @@ viewGroup.layoutTransition = layoutTransition
 // 代码动画启动
 view.animate().translationX(100f).translationY(100f).rotation(360f).alpha(0.5f).setDuration(1000).start()
 ```
+
+#### 矢量图动画
+
+矢量图动画: 通过对矢量图的属性进行动画操作, 例如旋转它或更改路径数据以将其变形为不同的图像.
+
+- 动画文件定义位置: `res/drawable/` & `res/animator/`
+- 动画定义方式 (xml)
+
+    ```xml
+    <!-- res/drawable/vectordrawable.xml  定义矢量图 -->
+    <vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:height="64dp"
+        android:width="64dp"
+        android:viewportHeight="600"
+        android:viewportWidth="600">
+        <group
+            android:name="rotationGroup"
+            android:pivotX="300.0"
+            android:pivotY="300.0"
+            android:rotation="45.0" >
+            <path
+                android:name="v"
+                android:fillColor="#000000"
+                android:pathData="M300,70 l 0,-70 70,70 0,0 -70,70z" />
+        </group>
+    </vector>
+
+    <!-- res/animator/animatorvectordrawable.xml  定义矢量图动画 -->
+    <animated-vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:drawable="@drawable/vectordrawable" >
+        <target
+            android:name="rotationGroup"
+            android:animation="@animator/rotation" />
+        <target
+            android:name="v"
+            android:animation="@animator/path_morph" />
+    </animated-vector>
+
+    <!-- res/animator/rotation.xml  定义旋转动画 -->
+    <objectAnimator
+        android:duration="6000"
+        android:propertyName="rotation"
+        android:valueFrom="0"
+        android:valueTo="360" />
+
+    <!-- res/animator/path_morph.xml  定义路径变形动画 -->
+    <set xmlns:android="http://schemas.android.com/apk/res/android">
+        <objectAnimator
+            android:duration="3000"
+            android:propertyName="pathData"
+            android:valueFrom="M300,70 l 0,-70 70,70 0,0   -70,70z"
+            android:valueTo="M300,70 l 0,-70 70,0  0,140 -70,0 z"
+            android:valueType="pathType" />
+    </set>
+    ```
 
 #### Transition (过渡动画)
 
@@ -2501,6 +2583,74 @@ view.animate().translationX(100f).translationY(100f).rotation(360f).alpha(0.5f).
     val button = findViewById<Button>(R.id.button)
     val stateListAnimator = AnimatorInflater.loadStateListAnimator(this, R.xml.animate_scale)
     button.stateListAnimator = stateListAnimator
+    ```
+
+#### 动画实用工具类(圆形揭示动画)
+
+`ViewAnimationUtils` 提供了一些实用的方法来创建和操作动画.
+
+- `createCircularReveal()`: 创建一个圆形揭示动画, 从一个视图的中心开始揭示到视图的边缘.
+
+    ```kotlin
+    val view = findViewById<View>(R.id.view)
+    // 获取视图的中心坐标
+    val cx = view.width / 2
+    val cy = view.height / 2
+    // 计算揭示动画的半径
+    val initialRadius = Math.hypot(cx.toDouble(), cy.toDouble()).toFloat()
+    val anim = ViewAnimationUtils.createCircularReveal(view, cx, cy, initialRadius, 0f)
+    anim.addListener(object : AnimatorListenerAdapter() {
+        override fun onAnimationStart(animation: Animator) {
+            view.visibility = View.INVISIBLE
+        }
+    })
+    anim.start()
+    ```
+
+#### 动态动画 (dynamicanimation)
+
+`DynamicAnimation` 是一个用于创建动态动画的类, 用于模拟物理运动, 例如弹簧, 摩擦力等. `DynamicAnimation` 有两个子类, 分别是 `SpringAnimation` 和 `FlingAnimation`. `SpringAnimation` 用于模拟弹簧运动, `FlingAnimation` 用于模拟惯性运动.
+
+- 需要引入额外的依赖库
+
+    ```gradle
+    dependencies {
+        implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
+    }
+    ```
+
+- `ViewProperty` 用于指定需要进行动画操作的属性, 如 `TRANSLATION_X`, `TRANSLATION_Y`, `TRANSLATION_Z`, `ROTATION`, `ROTATION_X`, `ROTATION_Y`, `SCALE_X`, `SCALE_Y`, `X`, `Y`, `Z`, `ALPHA`.
+
+- `FlingAnimation` 用于模拟惯性运动, 例如滑动效果.
+
+    ```kotlin
+    val view = findViewById<View>(R.id.view)
+    // 计算触摸速度 
+    val velocityX = 1000f
+    val maxScroll = 1000f
+    val flingAnimation = FlingAnimation(view, DynamicAnimation.TRANSLATION_X)
+    flingAnimation.setStartVelocity(velocityX) // 以每秒像素为单位的速度
+    flingAnimation.setMinValue(0f)
+    flingAnimation.setMaxValue(maxScroll)
+    flingAnimation.setFriction(1.1f) // 摩擦力, 定义了动画中速度降低的速度
+    flingAnimation.start()
+    ```
+
+- `SpringAnimation` 用于模拟弹簧运动, 例如弹簧的拉伸和压缩效果.
+
+    ```kotlin
+    val view = findViewById<View>(R.id.view)
+    val springAnimation = SpringAnimation(view, DynamicAnimation.TRANSLATION_Y, 0f)
+    springAnimation.spring.stiffness = SpringForce.STIFFNESS_LOW
+    springAnimation.spring.dampingRatio = SpringForce.DAMPING_RATIO_HIGH_BOUNCY
+    springAnimation.addUpdateListener { animation, value, velocity ->
+        // 更新视图的属性值
+    }
+    springAnimation.addEndListener { animation, canceled, value, velocity ->
+        // 动画结束时的回调
+        flingAnimation.start()
+    }
+    springAnimation.start()
     ```
 
 ## 网络库(HttpURLConnection, OkHttp, Retrofit, 内部库)
