--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -3216,6 +3216,7 @@ class MyHandler(looper: Looper) : Handler(looper) {
 - 支持生成路由文档. 实现自动生成 JSON 格式文档, 用于团队协作.
 - 支持增量编译(开启文档生成后无法增量编译).
 - 提供 IDE 插件支持. 实现通过 ARouter Helper 插件快速跳转到目标类, 提高开发效率.
+- 支持多模块工程. 实现路由按模块进行分组加载, 节约资源.
 
 #### 使用介绍
 
@@ -3326,18 +3327,6 @@ class MyHandler(looper: Looper) : Handler(looper) {
 
 #### 源码解析
 
-- 编译时基于注解处理器(apt)来生成路由表. 在每个组件的 build.gradle 文件中, 配置注解处理器的依赖和配置信息即可在编译时自动扫描组件内所有使用了预设注解(如 `@Route`)的类, 属性, 或方法, 然后根据注解中的信息生成一个路由表, 包含路径到目标类的映射关系和参数信息.
-- 运行时基于反射机制创建目标类实例. 在运行时, 通过路由表中的路径信息获取到目标类的类名, 然后通过反射机制创建目标类的实例, 并将参数注入到目标类中, 最后调用目标类的方法.
-- 支持服务, Activity, Fragment 多种类型的路由.
-- 支持直接解析标准 URL 进行跳转. 实现跨端统一跳转协议, 通过 URL 跳转到指定页面.
-- 支持跳转时自定义转场动画. 实现多种场景下的转场动画.
-- 支持定义多个拦截器, 按优先级顺序执行. 实现通过路径跳转到目标页面前的拦截处理, 常用于登录检查、埋点等逻辑, 简化重复代码.
-- 支持自定义全局与局部降级处理逻辑. 实现当路径失效或目标不存在时的降级处理, 提升用户体验.
-- 支持通过预设注解自动注入多种参数类型, 包括基本数据类型、自定义对象等. 实现通过路径跳转到目标页面, 无需手动解析传递的参数, 简化开发.
-- 支持生成路由文档. 实现自动生成 JSON 格式文档, 用于团队协作.
-- 支持增量编译(开启文档生成后无法增量编译).
-- 提供 IDE 插件支持. 实现通过 ARouter Helper 插件快速跳转到目标类, 提高开发效率.
-
 ##### arouter-annotation
 
 声明了 ARouter 框架中使用的注解类型和一些枚举类
@@ -3374,22 +3363,94 @@ class MyHandler(looper: Looper) : Handler(looper) {
 - `InterceptorProcessor` 支持解析 `@Interceptor` 注解.
 - `AutowiredProcessor` 支持解析 `@Autowired` 注解.
 
+注解处理时分模块处理, 区分模块采用 `build.gradle` 文件中的 `AROUTER_MODULE_NAME` 参数定义的模块名称.
+
+```gradle
+javaCompileOptions {
+    annotationProcessorOptions {
+        arguments = [AROUTER_MODULE_NAME: project.getName(), AROUTER_GENERATE_DOC: "enable"]
+    }
+}
+```
+
+支持生成路由文档, 通过 `AROUTER_GENERATE_DOC` 参数开启文档生成. 最终生成的文档是一个 JSON 格式的文件, 包含了所有模块的路由信息. 文档生成的路径是在 `build/generated/source/apt` 目录下. 文件名为 `arouter-map-of-模块名.json`.
+
+
 ###### 前置知识
 
 - `编译期元数据` 是指在编译时生成的元数据, 用于描述源代码的结构和信息, 通常用于代码生成、代码检查、代码优化等场景.
     - `SourceVersion` 枚举表示 Java 语言的版本, 通常用于判断当前编译环境支持的 `Java` 版本。
     - `Elements` 是 Java 编译器提供的是一个工具接口, 提供了一系列用于获取和操作源代码元素信息的便捷方法, 包括类、方法、字段、注解等.
+        - `TypeMirror` 是 Java 编译器提供的一个接口, 用于表示 Java 类型, 包括基本数据类型、数组、泛型、通配符、类型变量、方法类型等.
     - `Types` 是 Java 编译器提供的一个工具接口, 提供了对 Java 类型(如类、接口、枚举等)进行分析、比较、转换等操作的方法.
 - `AnnotationProcessor` 是 Java 编译器的一个工具, 用于在编译时扫描和处理注解.
     - `AbstractProcessor` 是所有注解处理器的基类. 编写自定义注解处理器时继承该类, 并实现 `process` 方法即可在编译期间实现自定义的注解处理逻辑.
     -  `Filer` 注解处理工具中提供的一个接口, 用于创建新文件、类文件、资源文件等.
+          - `Writer` 是 Java IO 提供的一个抽象类, 用于写入字符流, 如 json 文件.
     -  `Messager` 是注解处理工具中提供的一个接口, 用于输出信息、警告、错误等.
     -  Options: `Map<String,String>` 是传递给注解处理器的配置参数信息.
     -  `ProcessingEnvironment` 是传递给注解处理器的编译时环境信息, 可以通过该对象获取到 `Filer`、`Elements`、`Types` 等工具对象.
+    -  注解处理器的处理是分轮次（round）进行的, 每轮都会重复调用 process 方法. 第一轮编译器扫描所有源文件, 并调用 process 方法, 之后判断当前轮次是否有新的源文件生成, 如果有则继续扫描, 否则结束处理.
 - `AutoService` 是 Google 提供的一个库, 用于简化 `AnnotationProcessor` 的 SPI(Service Provider Interface) 注册.
 - `JavaPoet` 是一个用于生成 Java 源代码的库, 通过 `JavaPoet` 可以在编译时生成 Java 代码, 用于生成路由表.
+    - `ClassName` 用于表示类名, 如 `com.alibaba.arouter.facade.annotation.Route`.
+    - `ParameterizedTypeName` 用于表示类型, 如 List<String>、Map<String, Integer> 等.
+    - `ParameterSpec` 用于表示方法参数, 可以通过 `ParameterizedTypeName` 指定类型.
+    - `MethodSpec` 用于表示方法, 可以通过 `ParameterSpec` 指定方法参数.
+
 
 ###### RouteProcessor
+
+`@Route` 注解用于标注路由信息(如路径、组、名称、优先级、附加标志位). 
+- 路由只支持类注解, 包括 Activity, Fragment, Service, IProvider 类型.
+- 路由信息必须包含路径信息, 同时以 `/` 开头.
+- 路由组信息用于分组加载路由信息, 不提供则要求路径至少包含两级, 采用第一级作为组名.
+
+同时 Activity 支持 `@Autowired` 注解自动注入目的对象内部的属性值.
+
+- `groupMap: Map<String, List<RouteMeta>>` 用于分组存储不同模块和其内包含的路由信息.
+- `rootMap: Map<String, String>` 用于存储根路由信息, 用于生成类文件时的顺序.
+- `iProvider: TypeElement` 用于存储 `IProvider` 接口的元素信息.
+
+- `process(Set<? extends TypeElement> annotations, RoundEnvironment roundEnv)` 方法, 用于处理注解.
+    - `annotations` 包含了本轮处理器感兴趣的注解类型集合. 每个 TypeElement 代表一个注解类型, 通过此信息可以从 roundEnv 中查找对应的元素.
+    - `roundEnv` 提供了当前编译轮次的上下文信息, 可以通过它查询使用了特定注解的类、方法、字段等元素.
+
+```java
+// 假代码
+
+// 获取所有使用了 @Route 注解的元素
+Set<? extends Element> routeElements = roundEnv.getElementsAnnotatedWith(Route.class);
+
+// 分组存储所有的路由信息
+for (element : routeElements) {
+    TypeMirror elementType; // 获取元素的类型
+    Route routeAnnotation; // 获取元素的注解
+    RouteMeta routeMeta; // 创建元素对应的路由信息
+
+    when elementType is Activity or Fragment:
+        Map<String, Integer> paramsType; // 存储所有要注入的参数的类型
+        Map<String, Autowired> injectConfig; // 存储所有要注入的参数的配置(如名称、是否必须, 描述)
+        injectParamCollector(element, paramsType, injectConfig);
+
+        routeMeta = new RouteMeta(route, element, ACTIVITY or Fragment, paramsType, injectConfig);
+    when other(iProvider, Service) as type:
+        routeMeta = new RouteMeta(route, element, iProvider or Service);
+
+    groupMap[routeMeta.group()].add(routeMeta); // 这里每组的 routeMeta 按路径顺序存储
+}
+
+for (groupName, routeMetas in groupMap):
+    rootMap.put(group, group + "Root"); // 生成根路由信息
+
+// 构造路由信息
+ParameterizedTypeName inputMapTypeOfRoot: Map<String, Class<? extends IRouteGroup>>
+ParameterizedTypeName inputMapTypeOfGroup: Map<String, RouteMeta>
+MethodSpec.Builder loadIntoMethodBuilder: PUBLIC Override loadInto(Map<String, Class<? extends IRouteGroup>> routes)
+MethodSpec.Builder loadIntoMethodBuilder: PUBLIC Override loadInto(Map<String, RouteMeta> atlas)
+MethodSpec.Builder loadIntoMethodBuilder: PUBLIC Override loadInto(Map<String, RouteMeta> providers)
+```
+
 
 
 
