--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -14,6 +14,21 @@ lastmod: 2024-08-12 13:47:23
 
 > [!todo] > [https://developer.android.com/courses/android-basics-compose/course](https://developer.android.com/courses/android-basics-compose/course) > [https://developer.android.com/courses/unit/kotlin-basics-unit-1](https://developer.android.com/courses/unit/kotlin-basics-unit-1) > [https://www.geeksforgeeks.org/kotlin-android-tutorial/](https://www.geeksforgeeks.org/kotlin-android-tutorial/) > [https://developer.android.com/courses/](https://developer.android.com/courses/)
 
+## Android 系统
+
+### Android 系统架构
+
+![架构图](https://source.android.com/static/images/android-stack.svg?hl=zh-cn)
+
+System API: 系统 API 提供了访问系统服务的接口, 例如通知管理、窗口管理、包管理等.
+Android API: Android API 提供了访问 Android 应用程序框架的接口, 例如活动管理、内容提供程序、广播接收器等.
+Android framework: Android 框架提供了构建 Android 应用程序的基本组件, 例如活动、服务、广播接收器、内容提供程序等.
+System services: 系统服务提供了访问系统硬件和软件功能的接口, 例如传感器、网络、位置等.
+Android runtime (ART): Android 运行时是 Android 应用程序的运行环境, 负责加载和执行应用程序的字节码.
+Hardware abstraction layer (HAL): 硬件抽象层提供了访问硬件设备的接口, 例如摄像头、蓝牙、Wi-Fi 等.
+Native daemons and libraries: 本地守护进程和库提供了访问系统功能的接口, 例如音频、视频、图形等.
+Kernel: 内核是 Android 系统的核心, 负责管理系统资源、进程管理、设备驱动等.
+
 ## Android 应用程序组成
 
 ### 清单文件 `AndroidManifest.xml`
