--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -23,6 +23,8 @@ lastmod: 2024-08-12 13:47:23
 > [Android启动过程](https://medium.com/@khetanrajesh/android-boot-up-process-init-c05371c4f976)
 > [Linux进程Fork详解](https://juejin.cn/post/7022470737617223717)
 > [Android启动过程-万字长文(Android14)](https://www.cnblogs.com/anywherego/p/18221943)
+> [Android 进阶——系统启动之Android init进程的创建和启动](https://blog.csdn.net/CrazyMo_/article/details/114769424)
+> [Android 操作系统架构开篇](https://gityuan.com/android/)
 
 ![架构图](https://source.android.com/static/images/android-stack.svg?hl=zh-cn)
 
@@ -44,29 +46,63 @@ lastmod: 2024-08-12 13:47:23
 
 3. 内核初始化: 内核自解压, 启动内核, 初始化设备驱动程序.
 
-    - Linux 内核: 会创建 0 号进程, 运行在内核空间, 同时初始化硬件驱动, 中断处理程序, 进程调度程序, 内存管理, 基于内存的文件系统等.
+    - Linux 内核: 会创建 0 号进程(swapper), 运行在内核空间, 同时初始化硬件驱动, 中断处理程序, 进程调度程序, 内存管理, 基于内存的文件系统等.
     - ramdisk: 包含了一些初始化脚本, 用于挂载基于内存的根文件系统.
 
-4. init 进程启动: 由内核启动, 1 号进程, 运行在用户空间, 加载系统配置文件(如 init.rc), 负责启动系统服务.
+4. init 进程启动: 由内核启动, 1 号进程, 运行在用户空间, 加载系统配置文件(如 init.rc), 负责启动原生服务 和 Zygote.
 
     - init.rc: 用于配置系统属性, 如系统语言, 时区, 屏幕密度等.
+    - 原生服务(native service): 由 init 进程启动, 用于提供系统服务, 如 bootanim(开机动画), vold(存储设备事件),  servicemanager(内核层Binder服务管理者), installd(安装 APP), lmkd(低内存守护进程), adbd(调试), logcatd(日志)等, 不依赖于 Java 虚拟机环境, 一般通过 socket 通信.
 
-5. 系统服务启动: 由 init 进程首先启动 Zygote 进程, 然后启动其他重要系统服务.
+5. 系统服务启动: 由 init 进程首先启动 Zygote 进程, 然后启动其他重要系统服务进程.
 
     - Zygote 进程: fork 自 init 进程, 独立的用户空间, 执行文件名(/system/bin/app_process), 用于预先加载系统的核心类库(如安卓运行环境 ART, )和安卓系统服务, 然后进入循环, 等待新 Android 应用程序进程创建请求, 期间通过 socket 与其他进程通信, 基于 fork 创建应用程序进程.
         - 创建虚拟机, 注册JNI方法, 通过 JNI 调用 ZygoteInit.main().
         - 预加载系统常用的类、各种资源和核心库.
-        - 通过 fork 的形式初始化系统服务进程, 系统服务进程会通过反射调用 main() 方法启动包括 ActivityManagerService, ActivityTaskManagerService, RootWindowContainer, PackageManagerService, PowerManagerService, WindowManagerService 等系统服务.
-    - ActivityManagerService: 管理 Activity 的启动的服务进程.
-    - ActivityTaskManagerService: 管理 Activity 的任务栈的服务进程.
-    - PackageManagerService: 管理应用程序的安装、卸载、更新等操作.
-    - PowerManagerService: 管理设备的电源管理.
-    - WindowManagerService: 管理窗口的显示和布局.
+        - 启动系统服务进程.
+    - 系统服务进程均 fork 自 Zygote, 同时通过反射调用 main() 方法进行自定义初始化, 并通过 Binder 机制进行进程间通信. 常见的有 ActivityManagerService, ActivityTaskManagerService, RootWindowContainer, PackageManagerService, PowerManagerService, WindowManagerService, BatteryService, BatteryStatsService, DreamManagerService, DropBoxManagerService, SamplingProfilerService, 等系统服务进程, 进程创建失败时将会重启zygote进程.
 
-6. 桌面程序启动: 由 ActivityManagerService 初始启动时, 通过 ActivityTaskManagerService 和 RootWindowContainer 在所有显示器上通过 Intent 和 startHomeActivity 方法启动了当前用户的桌面程序(HomeActivity), 加载桌面程序的代码和资源, 显示用户界面.
-    - HomeActivity 启动页面通常是 Launcher, Activity 类型对象, 可以是其他定制的桌面程序.
-    - 启动页面包含工作区(搜索框, 桌面, 壁纸, Hotseat等), 应用程序列表, Widget等.
-    - 点击应用程序图标, 会通过 Intent 通过 startActivitySafely 方法启动应用程序的主 Activity, 包括快捷方式, 通知栏, 桌面小部件等.
+6. 桌面程序启动: 通过 ActivityManagerService 和 RootWindowContainer 在所有显示器上通过 Intent 和 startHomeActivity 方法启动了当前用户的桌面程序, 显示用户界面.
+    - 桌面程序是通过 Zygote 进程 fork 出的桌面程序进程, 启动时会进行初步初始化, 如构造 Looper, Handler等, 然后绑定到 AMS 中, 由其进行调度.
+    - 桌面页面通常是 Launcher, 一个 Activity 类型对象, 可以是其他定制的桌面程序, 包含工作区(搜索框, 桌面, 壁纸, Hotseat等), 应用程序列表, Widget等.
+
+### Android 通信机制
+
+### Android 系统服务
+
+#### ActivityManagerService(AMS)
+
+负责系统内四大组件的生命周期以及应用程序的管理进程.
+
+#### ActivityTaskManagerService(ATMS)
+
+AMS的辅助类, 负责处理 Activity 及其相关容器(如活动栈(Task), 活动栈组(Stack), 屏幕(Display)等)的管理.
+
+#### PackageManagerService(PMS)
+
+负责扫描和监控应用程序的安装和卸载, 管理应用程序的权限, 提供应用程序的信息, 管理应用程序的数据等.
+
+#### PowerManagerService
+
+管理设备的电源管理.
+
+#### WindowManagerService
+
+管理窗口的显示和布局, 其中 RootWindowContainer 为管理所有窗口的容器.
+
+#### SurfaceFlinger
+
+负责显示系统的窗口, 通过 OpenGL 渲染窗口, 并将渲染结果显示到屏幕上.
+
+### Socket
+
+#### Binder
+
+> [为什么 Android 要采用 Binder 作为 IPC 机制？](https://www.zhihu.com/question/39440766/answer/89210950)
+
+#### Handler
+
+Handler消息机制由 MessageQueue、Message、Looper、Handler 共同组成, 用于在不同线程之间传递消息, 实现线程间的通信.
 
 ### Android Runtime(ART, 兼容前身 Dalvik) 应用程序运行环境
 
@@ -272,11 +308,23 @@ lastmod: 2024-08-12 13:47:23
 - `android:name="android.hardware.microphone"`: 麦克风硬件功能.
 - `android:name="android.hardware.location.gps"`: GPS 定位硬件功能.
 
-### 应用程序启动
+### 应用程序安装和启动
 
+1. 应用程序安装: 通过 Google Play 商店、应用商店、APK 文件等方式安装应用程序, 安装时
 
+    - 系统会解析 APK 文件, 提取清单文件 `AndroidManifest.xml` 中的信息, 包括应用程序的名称、图标、版本号、权限以及各种组件等.
+    - 系统桌面启动器 (Launcher) 会在设备上安装应用程序时, 读取 app 的清单文件 `AndroidManifest.xml`, 并为其创建一个程序图标.
 
-### 应用程序基础: Application
+2. 应用程序启动: 点击应用程序图标, 当前所在程序(一般是桌面)通过 `Intent` 利用内部的 `startActivity()` 方法或 `LauncherApps` 提供的方法启动对应应用程序的主 `Activity`, 或其他快捷方式、通知栏、桌面小部件等功能, 启动时依然是通过 `ActivityManagerService` 等服务实现.
+    - 应用程序是通过 Zygote 进程 fork 出的进程, 启动时会绑定到 AMS 中, 同时进入主线程(UI 线程: ActivityThread)进行应用程序的初始化过程, 包括但不限于构造 Looper,  Handler等, 最后进入消息循环, 等待 AMS 的调度.
+    - 等待 AMS 发起 bindApplication() 和 ATMS 发起 attachApplication(), 会在主线程内部产生一个 BIND_APPLICATION 类型的 Message 发起包括但不限于 , Instrumentation(用于监控和管理应用行为), Application, ContentProvider, Activity, Service, BroadcastReceiver 等组件的初始化.
+    - 等待 AMS 发起 app.scheduleReceiver(), 会在主线程内部产生一个 RECEIVER 类型的 Message 进行广播接收器的 handle.
+
+### 应用程序组件: Instrumentation
+
+> [Android Instrumentation 框架简单说明 · 测试之家]{https://testerhome.com/topics/6592}
+
+### 应用程序组件: Application
 
 应用程序的基础是 `Application` 类, 一个单例类, 每个应用程序都有一个 `Application` 实例, 它是整个应用程序的入口点, 负责应用程序的初始化和全局状态的管理, 可以通过 `getApplication()` 方法获取.
 
@@ -285,7 +333,11 @@ lastmod: 2024-08-12 13:47:23
 - 监控整个应用程序的生命周期, 处理一些全局的状态变化.
 
     - `onCreate()`: 应用程序创建时调用.
+    - `onLowMemory()`: 系统内存不足时调用.
+    - `onTrimMemory()`: 系统内存不足时调用, 用于释放资源.
+    - `onConfigurationChanged()`: 配置发生变化时调用, 如屏幕旋转.
     - `onTerminate()`: 应用程序终止时调用.
+    - `registerActivityLifecycleCallbacks()`: 注册活动生命周期回调.
 
 ```kotlin
 class MyApplication : Application() {
