--- a/Research/计算机/{1}_开发环境配置/安卓开发环境配置.md
+++ b/Research/计算机/{1}_开发环境配置/安卓开发环境配置.md
@@ -16,25 +16,27 @@ lastmod: 2024-08-07 16:37:39
 ## 安装 Android Studio 及其配置
 
 > [!cite]
->  [Android Studio 下载文件归档  |  Android Developers](https://developer.android.com/studio/archive)
->
+> [Android Studio 下载文件归档  |  Android Developers](https://developer.android.com/studio/archive)
 
 - 打开设置，在`Appearance & Behavior`下有一个`New UI`的选项, 选择 `Enable new UI` 即可启用新的 UI. `Compact Mode` 用于缩小界面图标样式和间隔.
-![](安卓开发环境配置.assets/file-20240803190834666.png)
+
+![_](安卓开发环境配置.assets/file-20240803190834666.png)
+
 - 顶部主菜单功能: 项目名 | 版本控制 | 运行设备 | 构建配置 | 运行 | 调试 | 配置控制 | 项目编译控制 | 搜索 | 设置 | 用户
 - 左侧和右侧的工具栏均分为上下两个区域, 主要包含 项目 | 资源管理 | APP 质量检查 | 日志 | 问题 | 终端 | 设备管理 | Gradle 等功能. 可根据具体需要自行拖拽添加.
 - 导航栏默认在最下面, 可以在在 `View > Appearance > Navigation Bar` 中进行设置到上面
-![](安卓开发环境配置.assets/image-20240728101752.png)
+![_](安卓开发环境配置.assets/image-20240728101752.png)
 
 - 到 `Settings > Build,Execution,Deployment > Build Tools > Gradle > Gradle JDK` 中设置 Gradle 的 JDK 版本.
-![](安卓开发环境配置.assets/image-20240728102053.png)
+![_](安卓开发环境配置.assets/image-20240728102053.png)
 - 到 `Settings > Editor > File Encodings` 中设置文件编码格式, 防止乱码. 一般设置为 `UTF-8`.
-![](安卓开发环境配置.assets/image-20240728102414.png)
+![_](安卓开发环境配置.assets/image-20240728102414.png)
 
 ### 日志 ( Logcat )
 
-![](安卓开发环境配置.assets/image-20240728102452.png)
+![_](安卓开发环境配置.assets/image-20240728102452.png)
 默认情况下, 会设置 `package:mine` 为过滤条件, 可以在`Android Studio > Settings > Tools > Logcat` 中进行设置, 如设置为 `package:com.example.myapp tag:MyActivity level:debug`
+
 - `tag`：与日志条目的 tag 字段匹配。
 - `package`：与日志记录应用的软件包名称匹配。
 - `process`：与日志记录应用的进程名称匹配。
@@ -42,34 +44,33 @@ lastmod: 2024-08-07 16:37:39
 - `level`：与指定或更高严重级别的日志匹配，例如 DEBUG。
 - `age`：如果条目时间戳是最近的，则匹配。值要指定为数字，后跟表示时间单位的字母：s 表示秒，m 表示分钟，h 表示小时，d 表示天。例如，age: 5m 只会过滤过去 5 分钟内记录的消息。
 
-![](安卓开发环境配置.assets/image-20240728102614.png)
+![_](安卓开发环境配置.assets/image-20240728102614.png)
 
 为了防止日志太多, 可以在 `Android Studio > Settings > Tools > Logcat -> Logcat cycle buffer size` 增加缓冲区大小.
 
-
 在引用类或者变量的时候，因为输入的是小写而IDE没有提示的时候，需要设置一下匹配大小写。`Settings > Editor > General > Code Completion > Match case` 取消.
 
-![](安卓开发环境配置.assets/image-20240728102745.png)
+![_](安卓开发环境配置.assets/image-20240728102745.png)
 
 设置文件创建时的默认注释模板, 在 `Settings > Editor > File and Code Templates` 中进行设置.
-![](安卓开发环境配置.assets/image-20240728103009.png)
+![_](安卓开发环境配置.assets/image-20240728103009.png)
 
 ### 版本控制
 
 - 在 `Android Studio > Settings > Version Control` 中设置版本控制的配置.
 - 在 `VCS > Enable Version Control Integration` 中开启版本控制.
-![](安卓开发环境配置.assets/file-20240803194153279.png)
+![_](安卓开发环境配置.assets/file-20240803194153279.png)
 
 ### IDE 配置
 
 在 `Help > Edit Custom VM Options` 中对`studio.vmoptions` 文件进行配置.
+
 - 最大堆大小:  `-Xmx4096m`
 - 初始堆大小:  `-Xms2048m`
 - 缓存大小:  `-XX:MaxPermSize=1024m`
 - Java 垃圾回收器:  `-XX:+UseG1GC`
-- 
+
 在 `Help > Edit Custom Properties` 中对`idea.properties` 文件进行配置.
-- 
 
 在 `File > Manage IDE Settings > Export Settings` 中进行配置导出.
 
@@ -80,6 +81,7 @@ lastmod: 2024-08-07 16:37:39
 ### 项目管理
 
 在 `File > New > New Project` 中选择任意模板创建项目.
+
 - `Name` 控制项目的名称
 - `Package name` 控制项目的包名
 - `Save location` 控制项目的保存位置
@@ -90,6 +92,7 @@ lastmod: 2024-08-07 16:37:39
 每个项目包含了一个或多个模块, 每个模块都是一个独立的可构建单元, 有自己的构建配置, 资源文件和源代码, 分为应用模块, 功能模块和库模块.
 
 可以通过 `File > Project Structure` 进行可视化的项目配置.
+
 - `Project`: 包括 `Android Gradle Plugin Version` 和 `Gradle Version` 的配置.
 - `SDK Location`: 包括  `Android SDK Location` 的位置配置.
 - `Variables`: 包括项目构建脚本中可以使用的变量, 与所有项目级和模块级 `build.gradle` 中的 `ext` 配置对应.
@@ -99,7 +102,7 @@ lastmod: 2024-08-07 16:37:39
 
 #### 项目级结构及配置
 
-```
+```text
 └── MyApp/  # Project
     ├── local.properties # 构建系统的本地环境属性
     ├── gradle/
@@ -159,7 +162,7 @@ task clean(type: Delete) { // 用于配置自定义任务
 ```
 
 ##### `build.gradle.kts` 配置介绍 (gradle-8+)
-    
+
 ```kotlin
 // 顶级构建文件, 可以在其中添加所有子项目/模块通用的配置选项
 
@@ -217,10 +220,9 @@ rootProject.name = "My Application"
 include(":app", ":my-library-module")
 ```
 
-
 #### 模块级结构及配置
 
-```
+```text
 ├── app/  # Module
 │    ├── build.gradle(.kts) # Gradle 模块配置
 │    ├── build/ # 构建输出目录
@@ -246,6 +248,7 @@ include(":app", ":my-library-module")
 ```
 
 项目创建时会自动创建一个应用模块, 可以通过 `File > New > New Module` 创建其他模块.
+
 - 应用模块: 用于生成 APK 文件, 通常包含应用的代码和资源文件.
 - 功能模块: 包括动态特性模块和即时特性模块. 功能模块可以在运行时下载和安装.
 - 库模块: 用于生成 AAR 代码存档文件, 通常包含库的代码和资源文件, 可用作项目内其他模块的依赖, 或是导出到其他项目中.
@@ -284,7 +287,6 @@ android {
     }
 }
 ```
-
 
 除了模块类型, 还可以在 `build.gradle` 中配置模块的构建配置, 如 `android` 配置, `dependencies` 配置, `buildTypes` 配置等. 一个大致完整的 `build.gradle` 文件如下.
 
@@ -368,6 +370,7 @@ dependencies {
 ```
 
 ##### `build.gradle.kts` 配置介绍 (gradle-8+)
+
 ```kotlin
 plugins {
     alias(libs.plugins.android.library)
@@ -466,6 +469,7 @@ dependencies {
 ```
 
 - `buildFeatures.viewBinding = true` 用于启用视图绑定功能, 通过与 XML 布局文件中的视图 ID 相关联的视图绑定类, 可以更轻松地编写代码. 例如, 如果布局文件中有一个名为 `activity_main.xml` 的布局文件, 则会生成一个名为 `ActivityMainBinding` 的绑定类, 可以通过 `ActivityMainBinding.inflate(layoutInflater)` 来加载布局文件, 并通过 `ActivityMainBinding.textView` 来访问布局文件中的 `TextView` 视图, 以避免使用 `findViewById` 方法.
+
     ```kotlin
     import android.os.Bundle
     import androidx.appcompat.app.AppCompatActivity
@@ -486,12 +490,13 @@ dependencies {
         }
     }
     ```
-- `packaging.resources.excludes.add("/META-INF/{AL2.0,LGPL2.1}")` 用于排除 APK 文件中的特定文件, 如 `META-INF` 目录下的 `AL2.0` 和 `LGPL2.1` 文件, 以避免与其他库的冲突.
 
+- `packaging.resources.excludes.add("/META-INF/{AL2.0,LGPL2.1}")` 用于排除 APK 文件中的特定文件, 如 `META-INF` 目录下的 `AL2.0` 和 `LGPL2.1` 文件, 以避免与其他库的冲突.
 
 #### 资源管理
 
 包括图片、字符串、布局、动画等资源被存储在 `res/` 目录下的各个子目录中(不能进一步创建子目录), 可以使 Android Studio 自动处理资源文件, 并生成 `R` 类, 用于访问资源文件. 通常包括以下子目录:
+
 - `animator/` 定义属性动画的 XML 文件
 - `anim/` 定义视图动画( Tween animations)的 XML 文件
 - `color/` 定义颜色值的 XML 文件
@@ -508,7 +513,7 @@ dependencies {
 
  `res/` 目录下的内部所有资源都可在代码中通过 `R` 类的静态字段进行访问, 如 `R.drawable.ic_launcher_background`, `R.layout.activity_main`, `R.string.app_name`. 也可在 XML 文件中通过 `@` 符号进行访问, 如 `@drawable/ic_launcher_background`, `@layout/activity_main`, `@string/app_name`.
 
-```
+```kotlin
 // code
 val imageView = findViewById(R.id.myimageview) as ImageView
 imageView.setImageResource(R.drawable.ic_launcher_background)
@@ -519,7 +524,6 @@ imageView.setImageResource(R.drawable.ic_launcher_background)
     <color name="highlight">@color/red</color>
 </resources>
 ```
-
 
 库中的所有资源默认都是公开的, 想要将资源标记为私有, 可以在 `res/values/public.xml` 文件中声明一个或多个公共资源, 所有未声明的资源将自动设为私有. 特殊的, 可以使用空的 `public.xml` 文件来标记所有资源为私有.
 
@@ -536,8 +540,6 @@ val assetManager = context.assets
 val inputStream = assetManager.open("filename")
 
 ```
-
-
 
 ```xml
 
@@ -637,7 +639,6 @@ dependencies {
     implementation(project(":my-library-module"))
 }
 ```
-
 
 按下 `Alt+Enter` (Windows) 或 `Option+Enter` (Mac), 可以对代码进行装换或增强.
 
