--- a/Research/计算机/{1}_开发环境配置/系统环境设置.md
+++ b/Research/计算机/{1}_开发环境配置/系统环境设置.md
@@ -18,6 +18,7 @@ lastmod: 2024-07-28 09:59:33
 ### 代理环境安装
 
 Github 镜像加速方法
+
 - 压缩包下载加速：
     - `https://mirror.ghproxy.com/[file url]`
     - 备用： `https://hub.gitmirror.com/[file url]`
@@ -29,7 +30,7 @@ Github 镜像加速方法
     - 备用： `https://github.com.cnpmjs.org/[repo url]`
     - 示例： `git clone https://mirror.ghproxy.com/https://github.com/stilleshan/dockerfiles`
 
-```
+```bash
 V2rayU 程序加速下载链接：
 // arm64（m1）
 https://mirror.ghproxy.com/https://github.com/yanue/V2rayU/releases/download/v3.8.0/V2rayU-arm64.dmg
@@ -50,6 +51,7 @@ https://mirror.ghproxy.com/....
 ### homebrew 安装及其清华源配置
 
 - 命令直接安装或应用安装
+
 ```zsh
 # 方法1: 镜像安装命令
 xcode-select --install
@@ -76,6 +78,7 @@ eval "$(/opt/homebrew/bin/brew shellenv)"
 ```
 
 - Zsh 中设置默认源
+
 ```zsh
 # 创建所需配置文件(如果没有,   有则不需创建)
 touch .zprofile
@@ -100,7 +103,7 @@ brew update
 
 ### 常见系统软件安装
 
-办公软件([Pages](https://apps.apple.com/us/app/pages/id409201541?mt=12),   [‎Keynote](https://apps.apple.com/us/app/keynote/id409183694?mt=12),   [Numbers](https://apps.apple.com/us/app/numbers/id409203825?mt=12),   [微信和 qq：自带截图和ocr工具](https://apps.apple.com/cn/app/%E5%BE%AE%E4%BF%A1/id836500024?mt=12)) `brew install --cask wechat` | `brew install --cask qq`
+办公软件([Pages](https://apps.apple.com/us/app/pages/id409201541?mt=12), [Keynote](https://apps.apple.com/us/app/keynote/id409183694?mt=12), [Numbers](https://apps.apple.com/us/app/numbers/id409203825?mt=12), [微信和 qq：自带截图和ocr工具](https://apps.apple.com/cn/app/%E5%BE%AE%E4%BF%A1/id836500024?mt=12)) `brew install --cask wechat` | `brew install --cask qq`, [腾讯会议](https://apps.apple.com/cn/app/%E8%85%BE%E8%AE%AF%E4%BC%9A%E8%AE%AE/id1113122723?mt=12) `brew install --cask tencent-meeting`
 跨端文件同步([dropbox](https://www.dropbox.com/desktop)) `brew install --cask dropbox`
 程序管理([腾讯柠檬清理](https://lemon.qq.com/) | [CleanMyMac X](https://apps.apple.com/us/app/cleanmymac-x/id1339170533?mt=12)) `brew install --cask cleanmymac`
 浏览器([Chorme](https://www.google.com/chrome/),   [Edge](https://www.microsoft.com/en-us/edge/download))： `brew install --cask google-chrome` | `brew install --cask microsoft-edge`
@@ -111,14 +114,22 @@ brew 可视化界面([Cakebrew](https://www.cakebrew.com/))： `brew install cak
 剪切板管理([Maccy](https://github.com/p0deje/Maccy))： `brew install --cask maccy`
 输入法([微信输入法](https://z.weixin.qq.com/)) `brew install --cask wetype`
 录制和直播管理: `brew install --cask obs`
+腾讯音乐([QQ音乐](https://y.qq.com/download/mac.html)) `brew install --cask qqmusic`
 
 苹果开发者前瞻([Releases · insidegui/WWDC](https://github.com/insidegui/WWDC/releases))： `brew install --cask wwdc`
 离线文档查看工具([Dash](https://kapeli.com/dash)) `brew install --cask dash`
 罗技鼠标管理: `brew install --cask logitech-g-hub`
 远程控制([RealVnc](https://www.realvnc.com/en/connect/download/combined/)) `brew install --cask vnc-server` | `brew install --cask vnc-viewer`
-终端工具补充([hyper](https://github.com/vercel/hyper),   [tabby](https://github.com/Eugeny/tabby/))： `brew install --cask tabby` `brew install --cask hyper` 
+终端工具补充([hyper](https://github.com/vercel/hyper),   [tabby](https://github.com/Eugeny/tabby/))： `brew install --cask tabby` `brew install --cask hyper`
 窗口切换工具([AltTab](https://alt-tab-macos.netlify.app/))： `brew install --cask alt-tab`
 版本管理系统([Sourcetree](https://www.sourcetreeapp.com/))： `brew install --cask sourcetree`
+
+### 常见开发工具安装
+
+IntelliJ IDEA([IntelliJ IDEA](https://www.jetbrains.com/idea/download/#section=mac))： `brew install --cask intellij-idea`
+Docker([Docker](https://www.docker.com/products/docker-desktop))： `brew install --cask --appdir=/Applications docker`
+Tree([Tree](http://mackup.en.softonic.com/mac))： `brew install tree`
+Android Studio([Android Studio](https://developer.android.com/studio))： `brew install --cask android-studio`
 
 ~~SHH 客户端([Download Termius for Mac](https://termius.com/download/macos))： `brew install --cask termius` ~~
 ~~鼠标和触控板适配设置（[scroll-reverser](http://pilotmoon.com/scrollreverser/)）： `brew install --cask scroll-reverser` ~~
@@ -137,15 +148,15 @@ brew 可视化界面([Cakebrew](https://www.cakebrew.com/))： `brew install cak
 
 - 安装命令： `brew install --cask iterm2`
 - 设置为默认终端：打开 iTerm,  在默认菜单中选择”Make iTerm 2 Default Term”
-![](IOS%20开发环境配置.assets/截屏2024-04-07%2018.27.54.png)
+![_](IOS%20开发环境配置.assets/截屏2024-04-07%2018.27.54.png)
 
 #### 配置主题
 
 - 主题[下载地址](https://github.com/mbadolato/iTerm 2-Color-Schemes),  下载并解压压缩包,  找到 ”schemes“ 文件夹. 
 - 找到 Settings 配置界面中的 Profiles → Colors → Color Presets 
-![](IOS%20开发环境配置.assets/Pasted%20image%2020240407183725.png)
+![_](IOS%20开发环境配置.assets/Pasted%20image%2020240407183725.png)
 - 点击 Color Presets ,  在其下拉列表中选择 Import. 然后在刚才解压的”schemes“  文件夹中选择自己想要的颜色配置方案文件进行导入(onehalfdark). 
-![](IOS%20开发环境配置.assets/Pasted%20image%2020240407184213.png)
+![_](IOS%20开发环境配置.assets/Pasted%20image%2020240407184213.png)
 - 重新点击 Color Presets ,  在其下拉列表中选择新导入的主题. 
 
 #### 配置快捷键
@@ -169,39 +180,39 @@ source ~/.zshrc
 #### 状态栏设置
 
 - 找到 iTerm 2 -> Settings 配置界面中的 Profiles → Session → 勾选 Status bar enable -> configure Status bar
-![](IOS%20开发环境配置.assets/Pasted%20image%2020240407185748.png)
+![_](IOS%20开发环境配置.assets/Pasted%20image%2020240407185748.png)
 - 拖动自己想要的展示内容到下面空白处即可. 如果展示内容过多,  可以进入 Advanced -> 勾选 Prefer tight packing to stable positioning. 同时开启 auto-Rainbow
-![](IOS%20开发环境配置.assets/Pasted%20image%2020240407191654.png)
+![_](IOS%20开发环境配置.assets/Pasted%20image%2020240407191654.png)
 
 #### 窗口设置
 
 - 找到 iTerm 2 -> Settings 配置界面中的 Profiles → Window 根据自己的需求设置窗口透明度、背景图片、行列数以及风格等. 
-![](IOS%20开发环境配置.assets/Pasted%20image%2020240407193618.png)
+![_](IOS%20开发环境配置.assets/Pasted%20image%2020240407193618.png)
 
-背景图: ![](IOS%20开发环境配置.assets/v2-32966208e4cc8d0c0fa15cd967948544_1440w.webp)
+背景图: ![_](IOS%20开发环境配置.assets/v2-32966208e4cc8d0c0fa15cd967948544_1440w.webp)
 
 #### 整体样式兼容设置
 
 - 找到 iTerm 2 -> Settings 配置界面中的 Appearence → General ,  将 Theme 改为 Minimal
-![](IOS%20开发环境配置.assets/Pasted%20image%2020240407194050.png)
+![_](IOS%20开发环境配置.assets/Pasted%20image%2020240407194050.png)
 
 #### 解除终端历史行数限制
 
 - 找到 iTerm 2 -> Settings 配置界面中的 Profiles → Terminal ,  勾选 Unlimited scrollback
-![](IOS%20开发环境配置.assets/Pasted%20image%2020240407195636.png)
+![_](IOS%20开发环境配置.assets/Pasted%20image%2020240407195636.png)
 
 #### 微调
 
 问题：提示类插件的提示词清晰度不够
-![](IOS%20开发环境配置.assets/Pasted%20image%2020240407210426.png)
+![_](IOS%20开发环境配置.assets/Pasted%20image%2020240407210426.png)
 - 提高颜色对比度. 找到 iTerm 2 -> Settings 配置界面中的 Profiles → Colors ,  设置 Minimum Contrast 数值
-![](IOS%20开发环境配置.assets/Pasted%20image%2020240407210414.png)
+![_](IOS%20开发环境配置.assets/Pasted%20image%2020240407210414.png)
 
-![](IOS%20开发环境配置.assets/Pasted%20image%2020240407210707.png)
+![_](IOS%20开发环境配置.assets/Pasted%20image%2020240407210707.png)
 
 #### 最终效果：
 
-![](IOS%20开发环境配置.assets/Pasted%20image%2020240407195716.png)
+![_](IOS%20开发环境配置.assets/Pasted%20image%2020240407195716.png)
 
 ### ohmyzsh 安装及其配置
 
@@ -260,7 +271,7 @@ echo "source $(brew --prefix)/share/powerlevel10k/powerlevel10k.zsh-theme" >>~/.
 
 #### 最终效果
 
-![](IOS%20开发环境配置.assets/Pasted%20image%2020240407215441.png)
+![_](IOS%20开发环境配置.assets/Pasted%20image%2020240407215441.png)
 
 ### iTerm2 快捷键
 
